# larch

./: .gitignore  CMakeLists.txt  README.md  agent.json  config.h  emp-tool
agent/: CMakeLists.txt  agent.cc  asn1.h  auth_bench.cc  base64.cc  baseline_bench.cc  client.cc  client.h  init.cc  params.cc  params.h  reqs.cc  reqs.h  sig_parse.cc  sigs_bench.cc  throughput_bench.cc  u2f.h  x509.cc  x509.h
agent/bench/: CMakeLists.txt  agent.cc  auth_bench.cc  baseline_bench.cc  init.cc  sigs_bench.cc
agent/config/: agent.json
agent/src/: client.cc  client.h  sig_parse.h
baseline/: compile.sh  prove.sh  setup.sh
baseline/circuits/: sha512.zok
chrome-extension/src/: background.ts  inject_u2f_chromium.ts  uuid.ts
client/: CMakeLists.txt
client/bench/: CMakeLists.txt  agent.cc  auth_bench.cc  convert_circuit.cc  init.cc  init_reg_auth.cc  pw_auth_test.cc  pw_latency_bench.cc  sigs_bench.cc  throughput_bench.cc
client/src/: CMakeLists.txt  asn1.cc  asn1.h  client.cc  client.h  pw_client.cc  pw_client.h  u2f.h  x509.cc  x509.h
crypto/: ddh_proof.cc  params.cc  params.h  sigs.cc  sigs.h
crypto/src/: common.h  ddh_proof.cc  ddh_proof.h  or_groth.cc  or_groth.h  params.cc  params.h  pw.cc  pw.h  shamir.cc  shamir.h  sigs.cc  sigs.h
crypto/test/: CMakeLists.txt  ddh_test.cc  or_test.cc  pw_test.cc  sigs_test.cc
emp-tool/: CMakeLists.txt
emp-tool/zkboo/: .emp_prover.cc.swp  .prover_sys.cc.swp  CMakeLists.txt  common.cc  emp_prover.cc  emp_prover.h  prover.h  prover_sys.cc  prover_sys.h  prover_test.cc  verifier.h  view.cc
g16-baseline/: verify.sh
g16-baseline/circuits/: log.zok  sha256.zok
he/: CMakeLists.txt  passwords.cpp  passwords.h
log/: CMakeLists.txt  log.cc  log.h  pw_log.cc
network/: CMakeLists.txt  log.proto
scripts/: custom_style.py  exp_fido2.py  exp_pw.py  exp_setup.py  exp_totp.py  plot_cost.py  plot_fido2.py  plot_pw.py  plot_pw_comm.py  plot_storage.py  plot_totp.py  print_table.py  process_all_exp.py  requirements.txt  setup.py  totp_experiments.py  wan.sh
scripts/config/: ec2.json  ec2_fido2_1.json  ec2_fido2_2.json  ec2_fido2_4.json  ec2_fido2_8.json  ec2_tput_1.json  ec2_tput_4.json  fido2_machines.json  pw_machines.json  totp_machines.json
scripts/ref_data/: perf.json
scripts/ref_data/fido2_exp/: out_latency_1  out_latency_2  out_latency_4  out_latency_8  out_proof_1  out_proof_2  out_proof_4  out_proof_8  out_tput
scripts/ref_data/out_data/: perf.json
scripts/ref_data/out_data/fido2_exp/: out_latency_1  out_latency_2  out_latency_4  out_latency_8  out_proof_1  out_proof_2  out_proof_4  out_proof_8  out_tput
scripts/ref_data/out_data/pw_exp/: out  out_1
scripts/ref_data/out_data/totp_exp/: out_100  out_20  out_20_1  out_40  out_60  out_80
scripts/ref_data/pw_exp/: out  out_1
scripts/ref_data/totp_exp/: out_100  out_20  out_20_1  out_40  out_60  out_80
scripts/util/: ec2_util.py  math_util.py
spartan/: compile.sh  gen.sh  prove_verify.sh  witness.sh
spartan/ZoKrates/zokrates_cli/: factorization.out  gen.sh
spartan/ZoKrates/zokrates_cli/emma_tmp/: add.constraints  add.out  factorization.circuithdr  factorization.code  factorization.constraints  factorization.out  factorization.privinputs  factorization.prove  factorization.pubinputs
spartan/ZoKrates/zokrates_core/: Cargo.toml
spartan/ZoKrates/zokrates_core/src/: embed.rs
spartan/ZoKrates/zokrates_core/src/proof_system/: zkinterface.rs
spartan/ZoKrates/zokrates_core/src/proof_system/bn128/utils/: bellman.rs
spartan/ZoKrates/zokrates_field/src/: field.rs
spartan/ZoKrates/zokrates_stdlib/stdlib/hashes/sha256/: 512bit.code
spartan/spartan-zkinterface/: .gitignore  Cargo.toml  README.md  emma_run.sh  flatc_to_json.sh  run.sh
spartan/spartan-zkinterface/schema/: zkinterface.fbs
spartan/spartan-zkinterface/src/: lib.rs  main.rs  zkinterface_generated.rs
spartan/spartan-zkinterface/test/: add.inp.zkif  add.wit.zkif  add.zkif  foo.inp.zkif  foo.wit.zkif  foo.zkif  inv.inp.zkif  inv.wit.zkif  inv.zkif
spartan/spartan-zkinterface/test/bls12-381scalar/: add.inp.zkif  add.wit.zkif  add.zkif  inv.c  inv.inp.zkif  inv.wit.zkif  inv.zkif  quad.c  quad.inp.zkif  quad.wit.zkif  quad.zkif
spartan/zkinterface/: header.zkif  setup.sh  witness.zkif
spartan/zkinterface/cpp/: deps.sh
spartan/zkinterface/rust/: Cargo.toml
src/: CMakeLists.txt  prover.cc  prover.h  prover_test.cc  verifier.cc  verifier.h  view.cc  view.h
totp/: .gitignore  CMakeLists.txt  README.md  bench.csv  bench.json  bench.md  gen-grpc.sh
totp/circuit-src/: .gitignore  README.md  build-final.sh  chacha20.c  circuit_params.h  preparse.cpp  sha1_oryx.c  sha256.c  totp_enc.c
totp/circuit-src/isolated/: README.md  isol_aes128.c  isol_chacha20.c  isol_hmac_sha1.c  isol_sha256.c
totp/circuitgen/: gen-circuit.cpp
totp/network/: CMakeLists.txt  totp.proto
totp/src/: client-audit.cpp  client-auth.cpp  client-init.cpp  client.hpp  common.cpp  common.h  params.cpp  params.h  server.cpp  sigs.cpp  sigs.h
zkboo/: .prover.h.swp  .prover_sys.h.swp  .prover_test.cc.swp  .verifier.cc.swp  CMakeCache.txt  CMakeLists.txt  Makefile  circuit.cc  cmake_install.cmake  common.h  emp_prover.cc  emp_prover.h  emp_verifier.h  hash_test.cc  prover.cc  prover.h  prover_sys.cc  prover_sys.h  prover_test.cc  verifier.cc  verifier.h  view.cc  view.h
zkboo/circuit_files/: sha-256-multiblock-aligned.cpp  sha256.txt
zkboo/src/: CMakeLists.txt  circuit.cc  circuit.h  circuit_utils.cc  circuit_utils.h  emp_prover.h  emp_verifier.h  proof.cc  proof.h  prover.cc  prover.h  prover_sys.cc  prover_sys.h  ref_circuit.cc  scratch.cc  verifier.cc  verifier.h  view.cc  view.h
zkboo/test/: CMakeLists.txt  ct_test.cc  hash_test.cc  parallel_test.cc  proof_bench.cc  prover_test.cc  serialize_test.cc
zkboo/utils/: timer.h
